# transkribus_rest_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
transkribus_rest_api/: __init__.py  __main__.py  api.py  app.py  types.py  utils.py
